--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,13 +10,12 @@
         android:id="@+id/sm_login_logo"
         android:layout_width="300dp"
         android:layout_height="100dp"
-        android:src="@drawable/logo"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="60dp"
         android:layout_marginBottom="25dp"
-        />
+        android:src="@drawable/ic_user" />
 
-    //phone
+    //email
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/sm_login_phone"
         android:layout_width="match_parent"
@@ -24,7 +23,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
-        android:hint="@string/enter_phone"
+        android:hint="Email"
         app:hintAnimationEnabled="true"
         app:boxBackgroundMode="outline"
         android:layout_below="@id/sm_login_logo"
@@ -41,7 +40,7 @@
             android:id="@+id/sm_login_phone_value"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="number"
+            android:inputType="textEmailAddress"
             android:textColor="@android:color/black"
             android:textSize="17sp"
             android:textStyle="bold"/>
@@ -125,7 +124,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="10dp"
-        android:padding="17dp"
+        android:padding="5dp"
         android:textAllCaps="false"
         android:textSize="18dp"
         android:textStyle="bold"
@@ -134,18 +133,46 @@
         />
 
     <TextView
-        android:id="@+id/sm_login_admin_panel"
+        android:id="@+id/sm_login_create_account"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/i_am_an_admin"
-        android:layout_alignParentEnd="true"
         android:layout_below="@+id/sm_login_btn"
+        android:layout_centerHorizontal="true"
+        android:text="Don't have an account?"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="15sp"
         android:textStyle="bold"
-        android:layout_marginLeft="80dp"
-        android:layout_marginEnd="26dp"
+        android:layout_marginTop="90dp"
         />
+
+    <Button
+        android:id="@+id/sm_login_register"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/sm_login_create_account"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="10dp"
+        android:padding="5dp"
+        android:text="Register"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        android:textSize="18dp"
+        android:textStyle="bold" />
+
+<!--    <TextView-->
+<!--        android:id="@+id/sm_login_admin_panel"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_below="@+id/sm_login_btn"-->
+<!--        android:layout_alignParentEnd="true"-->
+<!--        android:layout_marginLeft="80dp"-->
+<!--        android:layout_marginEnd="26dp"-->
+<!--        android:text="@string/i_am_an_admin"-->
+<!--        android:textColor="@color/colorPrimaryDark"-->
+<!--        android:textSize="15sp"-->
+<!--        android:textStyle="bold" />-->
 
     <TextView
         android:id="@+id/sm_login_not_admin_panel"
