--- a/app/src/main/res/layout/activity_user_registration.xml
+++ b/app/src/main/res/layout/activity_user_registration.xml
@@ -10,11 +10,10 @@
         android:id="@+id/sm_user_registration_logo"
         android:layout_width="300dp"
         android:layout_height="100dp"
-        android:src="@drawable/logo"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="85dp"
+        android:layout_marginTop="80dp"
         android:layout_marginBottom="25dp"
-        />
+        android:src="@drawable/ic_user" />
 
     //name
     <com.google.android.material.textfield.TextInputLayout
@@ -55,7 +54,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
-        android:hint="@string/enter_phone"
+        android:hint="E-mail"
         app:hintAnimationEnabled="true"
         app:boxBackgroundMode="outline"
         android:layout_below="@id/sm_user_registration_name"
@@ -70,7 +69,7 @@
             android:id="@+id/sm_user_registration_phone_value"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="number"
+            android:inputType="textEmailAddress"
             android:textColor="@android:color/black"
             android:textSize="17sp"
             android:textStyle="bold"/>
@@ -140,22 +139,20 @@
     </com.google.android.material.textfield.TextInputLayout>
 
 
-
     <Button
         android:id="@+id/sm_user_registration_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/sm_user_registration_re_enter_password"
-        android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="30dp"
         android:layout_marginRight="20dp"
-        android:padding="14dp"
+        android:padding="8dp"
+        android:text="Register"
         android:textAllCaps="false"
-        android:textStyle="bold"
-        android:textSize="18dp"
-        android:text="@string/create_account"
         android:textColor="@android:color/white"
-        />
+        android:textSize="18dp"
+        android:textStyle="bold" />
 
 
 </RelativeLayout>
