--- a/app/src/main/res/layout/doctor_details_row.xml
+++ b/app/src/main/res/layout/doctor_details_row.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent"
         android:padding="10dp">
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <ImageView
             android:id="@+id/sm_doctor_details_row_img"
             android:layout_width="70dp"
             android:layout_height="70dp"
