--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,34 +5,39 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/sm_nav_find_a_doctor"
-            android:icon="@drawable/ic_doctors"
-            android:title="@string/find_a_doctor"
+            android:id="@+id/sm_home"
+            android:icon="@drawable/ic_home"
+            android:title="Home"
             android:iconTint="@android:color/white"/>
         <item
-            android:id="@+id/sm_nav_my_appointments"
-            android:icon="@drawable/ic_appointments"
-            android:title="@string/my_appointments"
+            android:id="@+id/sm_my_account"
+            android:icon="@drawable/ic_my_account"
+            android:title="My Account"
             android:iconTint="@android:color/white"/>
         <item
-            android:id="@+id/sm_nav_my_reports"
-            android:icon="@drawable/ic_reports"
-            android:title="@string/my_reports"
+            android:id="@+id/sm_my_sales"
+            android:icon="@drawable/ic_my_sales"
+            android:title="My Sales"
             android:iconTint="@android:color/white"/>
         <item
-            android:id="@+id/sm_nav_quick_health_checkups"
-            android:icon="@drawable/ic_checkups"
-            android:title="@string/quick_health_checkups"
+            android:id="@+id/sm_vehicles"
+            android:icon="@drawable/ic_vehicle"
+            android:title="Vehicles"
             android:iconTint="@android:color/white"/>
         <item
-            android:id="@+id/sm_nav_settings"
+            android:id="@+id/sm_spare_parts"
             android:icon="@drawable/ic_settings"
-            android:title="@string/settings"
+            android:title="Spare Parts"
             android:iconTint="@android:color/white"/>
         <item
-            android:id="@+id/sm_nav_logout"
-            android:icon="@drawable/ic_logout"
-            android:title="@string/logout"
+            android:id="@+id/sm_donations"
+            android:icon="@drawable/ic_donations"
+            android:title="Donations"
             android:iconTint="@android:color/white"/>
+<!--        <item-->
+<!--            android:id="@+id/sm_nav_logout"-->
+<!--            android:icon="@drawable/ic_logout"-->
+<!--            android:title="@string/logout"-->
+<!--            android:iconTint="@android:color/white"/>-->
     </group>
 </menu>
