--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00ACFF</color>
+    <color name="colorPrimary">#288CFF</color>
     <color name="colorPrimaryDark">#006BFF</color>
     <color name="colorAccent">#006BFF</color>
 
