--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,7 +23,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
-        android:hint="Email"
+        android:hint="Phone"
         app:hintAnimationEnabled="true"
         app:boxBackgroundMode="outline"
         android:layout_below="@id/sm_login_logo"
@@ -120,17 +120,16 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/sm_login_linear_layout_1"
-        android:layout_marginTop="5dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="5dp"
         android:layout_marginRight="20dp"
         android:layout_marginBottom="10dp"
         android:padding="5dp"
-        android:textAllCaps="false"
-        android:textSize="18dp"
-        android:textStyle="bold"
         android:text="@string/login_btn"
+        android:textAllCaps="false"
         android:textColor="@android:color/white"
-        />
+        android:textSize="18dp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/sm_login_create_account"
