--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     tools:context=".MainActivity">
 
     <ImageView
         android:id="@+id/sm_welcome_app_logo"
-        android:layout_width="300dp"
-        android:layout_height="120dp"
+        android:layout_width="250dp"
+        android:layout_height="90dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="100dp"
         android:src="@drawable/logo"
         />
 
@@ -49,24 +50,23 @@
         android:text="@string/create_account"
         />
 
-    <Button
-        android:id="@+id/sm_welcome_call_an_ambulance"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/sm_welcome_create_account"
-        android:layout_marginBottom="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:padding="17dp"
-        android:paddingStart="20dp"
-        android:paddingEnd="10dp"
-        android:textAllCaps="true"
-        android:textSize="17sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/white"
-        android:text="@string/call_an_ambulance"
-        android:drawableLeft="@drawable/ambulance"
-        android:drawableRight="@drawable/free"
-        />
+<!--    <Button-->
+<!--        android:id="@+id/sm_welcome_call_an_ambulance"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_above="@+id/sm_welcome_create_account"-->
+<!--        android:layout_marginLeft="20dp"-->
+<!--        android:layout_marginRight="20dp"-->
+<!--        android:layout_marginBottom="20dp"-->
+<!--        android:drawableLeft="@drawable/ambulance"-->
+<!--        android:drawableRight="@drawable/free"-->
+<!--        android:padding="17dp"-->
+<!--        android:paddingStart="20dp"-->
+<!--        android:paddingEnd="10dp"-->
+<!--        android:text="@string/call_an_ambulance"-->
+<!--        android:textAllCaps="true"-->
+<!--        android:textColor="@android:color/white"-->
+<!--        android:textSize="17sp"-->
+<!--        android:textStyle="bold" />-->
 
 </RelativeLayout>
