--- a/app/src/main/res/layout/activity_update_user_account.xml
+++ b/app/src/main/res/layout/activity_update_user_account.xml
@@ -222,22 +222,21 @@
     </com.google.android.material.textfield.TextInputLayout>
 
 
-
     <Button
         android:id="@+id/sm_update_user_delete_account_btn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="5dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:layout_marginBottom="5dp"
         android:padding="10dp"
-        android:textAllCaps="false"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/white"
         android:text="@string/delete_my_profile"
-        />
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        android:backgroundTint="#FF0000"
+        android:textSize="18sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
