--- a/app/src/main/res/layout/activity_user_registration.xml
+++ b/app/src/main/res/layout/activity_user_registration.xml
@@ -54,7 +54,7 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_marginTop="10dp"
-        android:hint="E-mail"
+        android:hint="Phone"
         app:hintAnimationEnabled="true"
         app:boxBackgroundMode="outline"
         android:layout_below="@id/sm_user_registration_name"
