--- a/app/src/main/res/layout/activity_doctor_registration.xml
+++ b/app/src/main/res/layout/activity_doctor_registration.xml
@@ -57,15 +57,14 @@
         android:id="@+id/sm_doctor_registration_change_profile_img_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/doctor_add_photo"
-        android:textColor="@android:color/black"
-        android:textStyle="bold"
-        android:textSize="14sp"
         android:layout_below="@+id/sm_doctor_registration_profile_img"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="4dp"
         android:layout_marginRight="12dp"
-        />
+        android:text="@string/doctor_add_photo"
+        android:textColor="@android:color/black"
+        android:textSize="14sp"
+        android:textStyle="bold" />
 
     //name
     <com.google.android.material.textfield.TextInputLayout
