--- a/app/src/main/res/layout/doctor_details_row.xml
+++ b/app/src/main/res/layout/doctor_details_row.xml
@@ -23,8 +23,8 @@
             android:layout_alignBottom="@+id/sm_doctor_details_row_name_value"
             android:layout_marginStart="3dp"
             android:layout_marginLeft="187dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginBottom="-32dp"
+            android:layout_marginTop="3dp"
+            android:layout_marginBottom="-45dp"
             android:layout_toRightOf="@+id/sm_doctor_details_row_specialization"
             android:text="price"
             android:textColor="@android:color/black"
@@ -49,14 +49,14 @@
             tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/sm_doctor_details_row_date_value"
             android:layout_width="129dp"
             android:layout_height="32dp"
             android:layout_alignEnd="@+id/sm_doctor_details_row_specialization_value"
             android:layout_alignBottom="@+id/sm_doctor_details_row_specialization_value"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="92dp"
-            android:layout_marginBottom="-35dp"
+            android:layout_marginBottom="-22dp"
             android:layout_toEndOf="@+id/sm_doctor_details_row_img"
             android:text="12-06-2021" />
 
