--- a/app/src/main/res/layout/activity_admin_dashboard.xml
+++ b/app/src/main/res/layout/activity_admin_dashboard.xml
@@ -35,7 +35,7 @@
                 android:layout_marginStart="9dp"
                 android:layout_marginBottom="8dp"
                 android:fontFamily="sans-serif-black"
-                android:text="@string/app_name"
+                android:text="My Sales"
                 android:layout_centerVertical="true"
                 android:textColor="@android:color/white"
                 android:textSize="17sp"
@@ -107,69 +107,76 @@
             android:textSize="18dp" />
     </androidx.cardview.widget.CardView>
 
-    <LinearLayout
-        android:layout_width="match_parent"
+
+
+
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card5"
+        android:layout_width="148dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="250dp"
-        android:orientation="vertical">
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/Card2"
+        android:elevation="30dp"
+        app:cardCornerRadius="10dp"
 
-<!--        <Button-->
-<!--            android:id="@+id/admin_dashboard_manage_customers"-->
-<!--            android:layout_width="269dp"-->
-<!--            android:layout_height="59dp"-->
-<!--            android:layout_marginLeft="50dp"-->
-<!--            android:layout_marginTop="30dp"-->
-<!--            android:layout_marginRight="30dp"-->
-<!--            android:drawableLeft="@drawable/ic_user"-->
-<!--            android:text="@string/manage_customers"-->
-<!--            />-->
+        >
 
-<!--        <Button-->
-<!--            android:id="@+id/admin_dashboard_manage_doctors"-->
-<!--            android:layout_width="271dp"-->
-<!--            android:layout_height="60dp"-->
-<!--            android:layout_marginLeft="50dp"-->
-<!--            android:layout_marginTop="10dp"-->
-<!--            android:layout_marginRight="30dp"-->
-<!--            android:drawableLeft="@drawable/ic_doctors"-->
-<!--            android:text="@string/manage_doctors" />-->
+        <TextView
+            android:id="@+id/sm_switch_vehicle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="Vehicles"
+            android:gravity="center"
+            android:textAllCaps="true"
+            android:textColor="@android:color/black"
+            android:textSize="18dp" />
+    </androidx.cardview.widget.CardView>
 
-<!--        <Button-->
+    <androidx.cardview.widget.CardView
+        android:id="@+id/Card6"
+        android:layout_width="148dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="185dp"
+        android:layout_marginTop="20dp"
+        android:elevation="30dp"
+        android:layout_below="@id/Card2"
+        app:cardCornerRadius="10dp"
 
+        >
 
-<!--            android:id="@+id/btn_manage_sessions"-->
-<!--            android:layout_width="271dp"-->
-<!--            android:layout_height="59dp"-->
-<!--            android:layout_marginLeft="50dp"-->
-<!--            android:layout_marginTop="10dp"-->
-<!--            android:layout_marginRight="30dp"-->
-<!--            android:drawableLeft="@drawable/ic_appointments"-->
-<!--            android:text="@string/manage_sessions" />-->
-
-<!--        <Button-->
-<!--            android:id="@+id/btn_manage_appoinments"-->
-<!--            android:layout_width="271dp"-->
-<!--            android:layout_height="59dp"-->
-<!--            android:layout_marginLeft="50dp"-->
-<!--            android:layout_marginTop="10dp"-->
-<!--            android:layout_marginRight="30dp"-->
-<!--            android:drawableLeft="@drawable/ic_appointments"-->
-<!--            android:text="@string/manage_appointments" />-->
+        <TextView
+            android:id="@+id/sm_switch_spares"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="5dp"
+            android:text="Spares"
+            android:gravity="center"
+            android:textAllCaps="true"
+            android:textColor="@android:color/black"
+            android:textSize="18dp" />
+    </androidx.cardview.widget.CardView>
 
 
-<!--        <Button-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/sm_admin_spare_parts_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/Card6"
+        android:layout_marginTop="10dp"
+        android:scrollbars="vertical" />
 
-<!--            android:id="@+id/btnmanageReports"-->
-<!--            android:layout_width="276dp"-->
-<!--            android:layout_height="59dp"-->
-<!--            android:layout_marginLeft="50dp"-->
-<!--            android:layout_marginTop="10dp"-->
-<!--            android:layout_marginRight="20dp"-->
-<!--            android:drawableLeft="@drawable/ic_reports"-->
-<!--            android:text="@string/manage_reports" />-->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/sm_admin_vehicle_list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/Card6"
+        android:layout_marginTop="10dp"
+        android:scrollbars="vertical" />
 
-
-    </LinearLayout>
 
 </RelativeLayout>
 
