--- a/app/src/main/res/layout/activity_vehicle_list.xml
+++ b/app/src/main/res/layout/activity_vehicle_list.xml
@@ -6,15 +6,15 @@
     android:layout_height="match_parent"
     tools:context=".VehicleListActivity">
 
+
     <Toolbar
         android:id="@+id/ss_vehicle_parts_list_toolbar"
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/colorPrimary"
-        >
+>
 
     </Toolbar>
-
 
     <SearchView
         android:id="@+id/ss_vehicle_list_search_view"
@@ -33,7 +33,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/ss_vehicle_list_search_view"
-        android:layout_marginTop="82dp"
+        android:layout_marginTop="44dp"
         android:scrollbars="vertical" />
 
     <RelativeLayout
@@ -41,21 +41,24 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/ss_vehicles_list_close_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:text="Vehicles"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:text="@string/close_btn"
             android:textColor="@android:color/white"
             android:textSize="17sp"
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/ss_vehicles_list_close_btn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_marginRight="12dp"
-            android:text="@string/close_btn"
+            android:layout_marginStart="7dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:text="Vehicles"
             android:textColor="@android:color/white"
             android:textSize="17sp"
             android:textStyle="bold" />
