--- a/app/src/main/res/layout/activity_vehicle_list.xml
+++ b/app/src/main/res/layout/activity_vehicle_list.xml
@@ -12,9 +12,24 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/colorPrimary"
->
+        >
 
     </Toolbar>
+
+    <HorizontalScrollView
+        android:id="@+id/option_chips"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="20dp">
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/ss_options"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+
+        </com.google.android.material.chip.ChipGroup>
+    </HorizontalScrollView>
 
     <SearchView
         android:id="@+id/ss_vehicle_list_search_view"
@@ -23,7 +38,7 @@
         android:layout_below="@+id/ss_vehicle_parts_list_toolbar"
         android:layout_centerHorizontal="true"
         android:layout_marginLeft="21dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="60dp"
         android:layout_marginRight="21dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/input_design" />
@@ -33,7 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/ss_vehicle_list_search_view"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="10dp"
         android:scrollbars="vertical" />
 
     <RelativeLayout
